# local-model-lab

./: .gitignore  README.md  pyproject.toml  show_raw.py
.claude/: settings.local.json
data/prompts/: benchmark_quick.yaml  comparison_full.yaml
reports/: comparison.md
src/local_model_lab/: client.py  config.py  server.py
src/local_model_lab/api/: app.py
src/local_model_lab/benchmarks/: metrics.py  prompts.py  runner.py
src/local_model_lab/cli/: main.py
src/local_model_lab/comparison/: evaluator.py  quality.py  report.py
src/local_model_lab/structured/: enforcer.py  experiments.py  schemas.py
tests/: test_client.py  test_metrics.py  test_prompts.py
